{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 82,
  "lineage": "32ccf78b-4a1f-9b6a-c5a4-46af90a7192a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-12-11T09:29:20.800-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/apt-subset-427519-g1/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
            "params": [],
            "priority": 1000,
            "project": "apt-subset-427519-g1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/firewalls/allow-internal",
            "source_ranges": [
              "10.240.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-11T09:29:20.893-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/apt-subset-427519-g1/global/firewalls/allow-ssh-gateway",
            "log_config": [],
            "name": "allow-ssh-gateway",
            "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
            "params": [],
            "priority": 1000,
            "project": "apt-subset-427519-g1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/firewalls/allow-ssh-gateway",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/disks/gateway"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T09:29:43.745-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/apt-subset-427519-g1/zones/europe-west1-b/instances/gateway",
            "instance_id": "4566375718557532520",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCc1CFAdpDzqZ4ynEyZ/PgepSGoqmXePrOLN3aBAEFQvvbzIzsJ9yGinyE5boMq9i5CQs6F0HZ4bwTM8aUuJBWth785c399weT2f/5MmFmpiIAtPU3prAQwUdaRc0od/sV08U1eObp88Fe52hP/jmM+tOkES/HcUcFnoL55VfJUi/Ou4HgseAi02b6eJu/c45Un2uQmSvS8VJzRlSvfsfZ89KTw+vAVLLKpPQwK7qQ0xi6L3FV31z8TZrJybUTuGkUMe9etR19p7AMP9ciX0nbj7OC/8ivrnGbNHPfSsj8OeO5O7PISSvxD0Gce5U6RqpovUI9tDKeG1N+mwOjEk7atzt5/XBOUCaUM5SL/EIpmLp66S+TwkigYSPcU+fDd5IVvJZJxyQaCi27QpG3zyeKBns3fTeBFYgXdiFbj1Pd6Ia [...]
            },
            "metadata_fingerprint": "rTnej5H8RJw=",
            "name": "gateway",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.140.243.13",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
                "network_ip": "10.240.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "apt-subset-427519-g1"
              }
            ],
            "project": "apt-subset-427519-g1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/instances/gateway",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gateway"
            ],
            "tags_fingerprint": "UrM6jlsUTDs=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T09:29:43.551-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/apt-subset-427519-g1/zones/europe-west1-b/instances/master",
            "instance_id": "7402004842108371304",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCc1CFAdpDzqZ4ynEyZ/PgepSGoqmXePrOLN3aBAEFQvvbzIzsJ9yGinyE5boMq9i5CQs6F0HZ4bwTM8aUuJBWth785c399weT2f/5MmFmpiIAtPU3prAQwUdaRc0od/sV08U1eObp88Fe52hP/jmM+tOkES/HcUcFnoL55VfJUi/Ou4HgseAi02b6eJu/c45Un2uQmSvS8VJzRlSvfsfZ89KTw+vAVLLKpPQwK7qQ0xi6L3FV31z8TZrJybUTuGkUMe9etR19p7AMP9ciX0nbj7OC/8ivrnGbNHPfSsj8OeO5O7PISSvxD0Gce5U6RqpovUI9tDKeG1N+mwOjEk7atzt5/XBOUCaUM5SL/EIpmLp66S+TwkigYSPcU+fDd5IVvJZJxyQaCi27QpG3zyeKBns3fTeBFYgXdiFbj1Pd6Ia [...]
            },
            "metadata_fingerprint": "rTnej5H8RJw=",
            "name": "master",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
                "network_ip": "10.240.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "apt-subset-427519-g1"
              }
            ],
            "project": "apt-subset-427519-g1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master"
            ],
            "tags_fingerprint": "4y7qQ8dL1yM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/disks/worker-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T09:29:43.564-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/apt-subset-427519-g1/zones/europe-west1-b/instances/worker-0",
            "instance_id": "5834204464668950888",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCc1CFAdpDzqZ4ynEyZ/PgepSGoqmXePrOLN3aBAEFQvvbzIzsJ9yGinyE5boMq9i5CQs6F0HZ4bwTM8aUuJBWth785c399weT2f/5MmFmpiIAtPU3prAQwUdaRc0od/sV08U1eObp88Fe52hP/jmM+tOkES/HcUcFnoL55VfJUi/Ou4HgseAi02b6eJu/c45Un2uQmSvS8VJzRlSvfsfZ89KTw+vAVLLKpPQwK7qQ0xi6L3FV31z8TZrJybUTuGkUMe9etR19p7AMP9ciX0nbj7OC/8ivrnGbNHPfSsj8OeO5O7PISSvxD0Gce5U6RqpovUI9tDKeG1N+mwOjEk7atzt5/XBOUCaUM5SL/EIpmLp66S+TwkigYSPcU+fDd5IVvJZJxyQaCi27QpG3zyeKBns3fTeBFYgXdiFbj1Pd6Ia [...]
            },
            "metadata_fingerprint": "rTnej5H8RJw=",
            "name": "worker-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
                "network_ip": "10.240.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "apt-subset-427519-g1"
              }
            ],
            "project": "apt-subset-427519-g1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/instances/worker-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/disks/worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T09:29:44.881-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/apt-subset-427519-g1/zones/europe-west1-b/instances/worker-1",
            "instance_id": "2283797993135489384",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCc1CFAdpDzqZ4ynEyZ/PgepSGoqmXePrOLN3aBAEFQvvbzIzsJ9yGinyE5boMq9i5CQs6F0HZ4bwTM8aUuJBWth785c399weT2f/5MmFmpiIAtPU3prAQwUdaRc0od/sV08U1eObp88Fe52hP/jmM+tOkES/HcUcFnoL55VfJUi/Ou4HgseAi02b6eJu/c45Un2uQmSvS8VJzRlSvfsfZ89KTw+vAVLLKpPQwK7qQ0xi6L3FV31z8TZrJybUTuGkUMe9etR19p7AMP9ciX0nbj7OC/8ivrnGbNHPfSsj8OeO5O7PISSvxD0Gce5U6RqpovUI9tDKeG1N+mwOjEk7atzt5/XBOUCaUM5SL/EIpmLp66S+TwkigYSPcU+fDd5IVvJZJxyQaCi27QpG3zyeKBns3fTeBFYgXdiFbj1Pd6Ia [...]
            },
            "metadata_fingerprint": "rTnej5H8RJw=",
            "name": "worker-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
                "network_ip": "10.240.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "apt-subset-427519-g1"
              }
            ],
            "project": "apt-subset-427519-g1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/instances/worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/disks/worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T09:29:43.258-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/apt-subset-427519-g1/zones/europe-west1-b/instances/worker-2",
            "instance_id": "3191285666081620328",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCc1CFAdpDzqZ4ynEyZ/PgepSGoqmXePrOLN3aBAEFQvvbzIzsJ9yGinyE5boMq9i5CQs6F0HZ4bwTM8aUuJBWth785c399weT2f/5MmFmpiIAtPU3prAQwUdaRc0od/sV08U1eObp88Fe52hP/jmM+tOkES/HcUcFnoL55VfJUi/Ou4HgseAi02b6eJu/c45Un2uQmSvS8VJzRlSvfsfZ89KTw+vAVLLKpPQwK7qQ0xi6L3FV31z8TZrJybUTuGkUMe9etR19p7AMP9ciX0nbj7OC/8ivrnGbNHPfSsj8OeO5O7PISSvxD0Gce5U6RqpovUI9tDKeG1N+mwOjEk7atzt5/XBOUCaUM5SL/EIpmLp66S+TwkigYSPcU+fDd5IVvJZJxyQaCi27QpG3zyeKBns3fTeBFYgXdiFbj1Pd6Ia [...]
            },
            "metadata_fingerprint": "rTnej5H8RJw=",
            "name": "worker-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
                "network_ip": "10.240.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "apt-subset-427519-g1"
              }
            ],
            "project": "apt-subset-427519-g1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/zones/europe-west1-b/instances/worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/apt-subset-427519-g1/global/networks/k8s-vpc",
            "mtu": 0,
            "name": "k8s-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6480393671720518069",
            "numeric_id": "6480393671720518069",
            "project": "apt-subset-427519-g1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-11T09:29:20.813-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/apt-subset-427519-g1/regions/europe-west1/routers/k8s-router",
            "name": "k8s-router",
            "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
            "project": "apt-subset-427519-g1",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/regions/europe-west1/routers/k8s-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "apt-subset-427519-g1/europe-west1/k8s-router/k8s-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "k8s-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "apt-subset-427519-g1",
            "region": "europe-west1",
            "router": "k8s-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-11T09:29:21.057-08:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/apt-subset-427519-g1/regions/europe-west1/subnetworks/k8s-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/global/networks/k8s-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "apt-subset-427519-g1",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apt-subset-427519-g1/regions/europe-west1/subnetworks/k8s-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4902441417522495902
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}